Erweiterung build.gradl für Indexierung Solr

--- a/ada_adagisa_pub/build.gradle
+++ b/ada_adagisa_pub/build.gradle
@@ -16,3 +16,7 @@ task transferAdagisa(type: Db2Db){
                     true)
     ];
 }
+
+task refreshSolr(type:Exec, dependsOn:'transferAdagisa') {
+	commandLine 'curl', '-i', '--max-time', '5', solrIndexupdaterBaseUrl + '/queue?ds=ch.so.ada.adagisa.flaechenfundstellen_geschuetzt,ch.so.ada.adagisa.punktfundstellen_geschuetzt,ch.so.ada.adagisa.punktfundstellen_ungeschuetzt'
+}
