--- a/afu_abbaustellen_pub/build.gradle
+++ b/afu_abbaustellen_pub/build.gradle
@@ -12,3 +12,7 @@ task transferAfuAbbaustellen(type: Db2Db){
             new TransferSet('afu_abbaustellen_pub_abbaustelle.sql', 'afu_abbaustellen_pub.abbaustelle', true),
     ];
 }
+
+task refreshSolr(type:Exec, dependsOn:'transferAfuAbbaustellen') {
+	commandLine 'curl', '-i', '--max-time', '5', solrIndexupdaterBaseUrl + '/queue?ds=ch.so.afu.abbaustellen.abbaustellen'
+}
