--- a/afu_ingeso_pub/build.gradle
+++ b/afu_ingeso_pub/build.gradle
@@ -13,3 +13,7 @@ task transferAfuIngeso(type: Db2Db){
             new TransferSet('afu_ingeso_pub_punktobjekt.sql', 'afu_ingeso_pub.punktobjekt', true)
     ];
 }
+
+task refreshSolr(type:Exec, dependsOn:'transferAfuIngeso') {
+	commandLine 'curl', '-i', '--max-time', '5', solrIndexupdaterBaseUrl + '/queue?ds=ch.so.afu.geotope.flaechenobjekte,ch.so.afu.geotope.punktobjekte'
+}
