--- a/afu_altlasten_pub/build.gradle
+++ b/afu_altlasten_pub/build.gradle
@@ -27,10 +27,14 @@ task transferAfuAltlasten(type: Db2Db){
     ];        
 }
 
-task transferAfuAltlast4Web(type: Db2Db){
+task transferAfuAltlast4Web(type: Db2Db, dependsOn:'transferAfuAltlasten'){
     sourceDb = [dbUriAltlast4web, dbUserAltlast4web, dbPwdAltlast4web]
     targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
             new TransferSet('afu_altlasten_pub_belastete_standorte_altlast4web.sql', 'afu_altlasten_pub.belastete_standorte_altlast4web', true)
     ];
+}
+
+task refreshSolr(type:Exec, dependsOn:'transferAfuAltlast4Web') {
+	commandLine 'curl', '-i', '--max-time', '5', solrIndexupdaterBaseUrl + '/queue?ds=ch.so.afu.altlasten.standorte,ch.so.afu.altlasten.standorte_geschuetzt'
 }
