--- a/awjf_jagd_pub/build.gradle
+++ b/awjf_jagd_pub/build.gradle
@@ -13,3 +13,7 @@ task transferAwjfJagd(type: Db2Db){
             new TransferSet('awjf_jagd_pub_jagdreviere.sql', 'awjf_jagd_pub.jagdreviere', true)
     ];
 }
+
+task refreshSolr(type:Exec, dependsOn:'transferAwjfJagd') {
+	commandLine 'curl', '-i', '--max-time', '5', solrIndexupdaterBaseUrl + '/queue?ds=ch.so.awjf.jagdreviere'
+}
