[afu_isboden_pub] Erweiterung build.gradl für Indexierung Solr

--- a/afu_isboden_pub/build.gradle
+++ b/afu_isboden_pub/build.gradle
@@ -20,3 +20,8 @@ task transferAfuIsboden(type: Db2Db){
                     'afu_isboden_pub.bodenprofilstandort_profilskizze', true)
     ]
 }
+
+task refreshSolr(type:Exec, dependsOn:'transferAdagisa') {
+        commandLine 'curl', '-i', '--max-time', '5', solrIndexupdaterBaseUrl + '/queue?ds=ch.so.afu.bodeninformationen.bodenprofilstandorte'
+}
+
