--- a/afu_isboden_pub/build.gradle
+++ b/afu_isboden_pub/build.gradle
@@ -21,7 +21,7 @@ task transferAfuIsboden(type: Db2Db){
     ]
 }
 
-task refreshSolr(type:Exec, dependsOn:'transferAdagisa') {
+task refreshSolr(type:Exec, dependsOn:'transferAfuIsboden') {
         commandLine 'curl', '-i', '--max-time', '5', solrIndexupdaterBaseUrl + '/queue?ds=ch.so.afu.bodeninformationen.bodenprofilstandorte'
 }
 
