--- a/afu_abbaustellen_pub/build.gradle
+++ b/afu_abbaustellen_pub/build.gradle
@@ -3,7 +3,7 @@ import ch.so.agi.gretl.api.TransferSet
 
 apply plugin: 'ch.so.agi.gretl'
 
-defaultTasks 'transferAfuAbbaustellen'
+defaultTasks 'refreshSolr'
 
 task transferAfuAbbaustellen(type: Db2Db){
     sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
