--- a/arp_naturreservate_pub/build.gradle
+++ b/arp_naturreservate_pub/build.gradle
@@ -3,7 +3,7 @@ import ch.so.agi.gretl.api.TransferSet
 
 apply plugin: 'ch.so.agi.gretl'
 
-defaultTasks 'transferArpNaturreservate'
+defaultTasks 'refreshSolr'
 
 task transferArpNaturreservate(type: Db2Db){
     sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
