--- a/avt_verkehrszaehlstellen_pub/build.gradle
+++ b/avt_verkehrszaehlstellen_pub/build.gradle
@@ -3,7 +3,7 @@ import ch.so.agi.gretl.api.TransferSet
 
 apply plugin: 'ch.so.agi.gretl'
 
-defaultTasks 'transferAvtVerkehrszaehlstellen'
+defaultTasks 'refreshSolr'
 
 task transferAvtVerkehrszaehlstellen(type: Db2Db){
     sourceDb = [dbUriEdit, dbUserEdit, dbPwdEdit]
