--- a/awjf_jagd_pub/build.gradle
+++ b/awjf_jagd_pub/build.gradle
@@ -3,7 +3,7 @@ import ch.so.agi.gretl.api.TransferSet
 
 apply plugin: 'ch.so.agi.gretl'
 
-defaultTasks 'transferAwjfJagd'
+defaultTasks 'refreshSolr'
 
 task transferAwjfJagd(type: Db2Db){
     sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
