--- a/awjf_wald_pub/build.gradle
+++ b/awjf_wald_pub/build.gradle
@@ -3,7 +3,7 @@ import ch.so.agi.gretl.api.TransferSet
 
 apply plugin: 'ch.so.agi.gretl'
 
-defaultTasks 'transferAwjf'
+defaultTasks 'refreshSolr'
 
 task transferAwjf(type: Db2Db){
     sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
