--- a/afu_wasserbewirtschaftung_pub/build.gradle
+++ b/afu_wasserbewirtschaftung_pub/build.gradle
@@ -3,7 +3,7 @@ import ch.so.agi.gretl.api.TransferSet
 
 apply plugin: 'ch.so.agi.gretl'
 
-defaultTasks 'transferAfuWasserbewirtschaftung'
+defaultTasks 'refreshSolr'
 
 task transferAfuWasserbewirtschaftung(type: Db2Db){
     sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
@@ -16,4 +16,8 @@ task transferAfuWasserbewirtschaftung(type: Db2Db){
             new TransferSet('afu_wasserbewirtschaftung_trinkwasserobjekte_pub.sql', 'afu_wasserbewirtschaftung_pub.wassrbwrtschftung_trinkwasserversorgung', true), 
             new TransferSet('afu_wasserbewirtschaftung_oberflaechenhydrometrie.sql', 'afu_wasserbewirtschaftung_pub.wassrbwrtschftung_oberflaechenhydrometrie', true)
     ];
+}
+
+task refreshSolr(type:Exec, dependsOn:'transferAfuWasserbewirtschaftung') {
+	commandLine 'curl', '-i', '--max-time', '5', solrIndexupdaterBaseUrl + '/queue?ds=ch.so.afu.gewaesserschutz.quellen,ch.so.afu.wasserbewirtschaftung.quellen,ch.so.afu.gewaesserschutz.fassungen,ch.so.afu.wasserbewirtschaftung.fassung,ch.so.afu.wasserbewirtschaftung.sondierung,ch.so.afu.wasserbewirtschaftung.versickerungsschacht,ch.so.afu.wasserbewirtschaftung.grundwasserwaermenutzung'
 }
