--- a/avt_kantonsstrassen_pub/build.gradle
+++ b/avt_kantonsstrassen_pub/build.gradle
@@ -9,9 +9,7 @@ task transferAvtKantonsstrassen(type: Db2Db){
     sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
     targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
-            new TransferSet('avt_kantonsstrassen_pub_bezugspunkt.sql', 'avt_kantonsstrassen_pub.bezugspunkt', true),   
-            new TransferSet('avt_kantonsstrassen_pub_kantonsstrassen.sql', 'avt_kantonsstrassen_pub.kantonsstrassen', true),
-            new TransferSet('avt_kantonsstrassen_pub_vereinbarung.sql', 'avt_kantonsstrassen_pub.vereinbarung', true)
+            new TransferSet('avt_kantonsstrassen_pub_kantonsstrassen.sql', 'avt_kantonsstrassen_pub.kantonsstrassen', true)
     ];
 }
 
