--- a/avt_oevkov/build.gradle
+++ b/avt_oevkov/build.gradle
@@ -10,32 +10,31 @@ def dataPath= '/home/barpasen/gretljobs/avt_oevkov_import/'
 
 // OEVKOV Variablen
 def currentYear = '2019'
-def lastYear = ((currentYear as Integer) - 1).toString()
 
 
 defaultTasks 'do_Gesamtberechnung'
 
 task AuswertungGTFS(type: SqlExecutor){
     database = [dbUriSogis, dbUserSogis, dbPwdSogis]
-    sqlParameters = [currentYear: currentYear, lastYear: lastYear]
+    sqlParameters = [currentYear: currentYear]
     sqlFiles = ['insert_into_gtfs_auswertung.sql']
 }
 
 task AuswertungGesamt(type: SqlExecutor){
     database = [dbUriSogis, dbUserSogis, dbPwdSogis]
-    sqlParameters = [currentYear: currentYear, lastYear: lastYear]
+    sqlParameters = [currentYear: currentYear]
     sqlFiles = ['insert_into_gesamtauswertung.sql']
 }
 
 task AuswertungKosten(type: SqlExecutor){
     database = [dbUriSogis, dbUserSogis, dbPwdSogis]
-    sqlParameters = [currentYear: currentYear, lastYear: lastYear]
+    sqlParameters = [currentYear: currentYear]
     sqlFiles = ['berechnung_kosten.sql']
 }
 
 task AuswertungHaltestellenbuffer(type: SqlExecutor){
     database = [dbUriSogis, dbUserSogis, dbPwdSogis]
-    sqlParameters = [currentYear: currentYear, lastYear: lastYear]
+    sqlParameters = [currentYear: currentYear]
     sqlFiles = ['haltestellenbuffer_insert.sql']
 }
 
