--- a/agi_mopublic_pub/build.gradle
+++ b/agi_mopublic_pub/build.gradle
@@ -30,3 +30,7 @@ task transferAgiMopublic(type: Db2Db){
             new TransferSet("agi_mopublic_pub_mopublic_strassenname_pos.sql", 'agi_mopublic_pub.mopublic_strassenname_pos', true)
     ];        
 }
+
+task refreshSolr(type:Exec, dependsOn:transferAgiMopublic) {
+	commandLine 'curl', '-i', '--max-time', '20', solrIndexupdaterBaseUrl + '/queue?ds=ch.so.agi.av.bodenbedeckung,ch.so.agi.av.gebaeudeadressen.gebaeudeeingaenge,ch.so.agi.av.grundstuecke.rechtskraeftig,ch.so.agi.av.grundstuecke.projektierte,ch.so.agi.av.nomenklatur.flurnamen,ch.so.agi.av.nomenklatur.gelaendenamen'
+}
