--- a/arp_npl_pub/build.gradle
+++ b/arp_npl_pub/build.gradle
@@ -1,9 +1,13 @@
 import ch.so.agi.gretl.tasks.*
 import ch.so.agi.gretl.api.TransferSet
 
-defaultTasks 'transferArpNpl'
+def GROUP = "npl_edit_to_pub"
 
-task transferArpNpl(type: Db2Db){
+defaultTasks 'transferAlteGrundnutzung'
+
+task transferArpNpl(type: Db2Db) {
+    description = "Übertrag neue Nutzungsplanungsdaten"
+    group = GROUP
     sourceDb = [dbUriEdit, dbUserEdit, dbPwdEdit]
     targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
@@ -19,5 +23,15 @@ task transferArpNpl(type: Db2Db){
             new TransferSet("transform_arp_npl_pub_verfahrenstand_vs_perimeter_verfahrenstand.sql", 'arp_npl_pub.nutzungsplanung_vs_perimeter_verfahrensstand', true),
             new TransferSet("transform_arp_npl_pub_verfahrenstand_vs_perimeter_beschriftung.sql", 'arp_npl_pub.nutzungsplanung_vs_perimeter_beschriftung', true)
             //TODO: nutzungsplanung_dokument ?
+    ];
+}
+
+task transferAlteGrundnutzung(type: Db2Db, dependsOn: "transferArpNpl") {
+    description = "Übertrag alte Nutzungsplanungsdaten für Gemeinden die noch nicht aufgebarbeitet wurden."
+    group = GROUP
+    sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
+    targetDb = [dbUriPub, dbUserPub, dbPwdPub]
+    transferSets = [
+            new TransferSet("uebertrag_alte_sogisdaten_zonenplan_grundnutzung.sql", 'arp_npl_pub.nutzungsplanung_grundnutzung', false)            
     ];
 }
