--- a/avt_oevkov/build.gradle
+++ b/avt_oevkov/build.gradle
@@ -4,38 +4,36 @@ import ch.so.agi.gretl.api.TransferSet
 apply plugin: 'ch.so.agi.gretl'
 
 
-description = "GRETL-Job für die Berechnung des OEVKOV in der Test sogis-DB"
+description = "GRETL-Job für die Berechnung des OEVKOV in der Sogis-DB"
 
-def dataPath= '/home/barpasen/gretljobs/avt_oevkov_import/'
 
 // OEVKOV Variablen
 def currentYear = '2019'
-def lastYear = '2018'
 
 
 defaultTasks 'do_Gesamtberechnung'
 
 task AuswertungGTFS(type: SqlExecutor){
     database = [dbUriSogis, dbUserSogis, dbPwdSogis]
-    sqlParameters = [currentYear: currentYear, lastYear: lastYear]
+    sqlParameters = [currentYear: currentYear]
     sqlFiles = ['insert_into_gtfs_auswertung.sql']
 }
 
 task AuswertungGesamt(type: SqlExecutor){
     database = [dbUriSogis, dbUserSogis, dbPwdSogis]
-    sqlParameters = [currentYear: currentYear, lastYear: lastYear]
+    sqlParameters = [currentYear: currentYear]
     sqlFiles = ['insert_into_gesamtauswertung.sql']
 }
 
 task AuswertungKosten(type: SqlExecutor){
     database = [dbUriSogis, dbUserSogis, dbPwdSogis]
-    sqlParameters = [currentYear: currentYear, lastYear: lastYear]
+    sqlParameters = [currentYear: currentYear]
     sqlFiles = ['berechnung_kosten.sql']
 }
 
 task AuswertungHaltestellenbuffer(type: SqlExecutor){
     database = [dbUriSogis, dbUserSogis, dbPwdSogis]
-    sqlParameters = [currentYear: currentYear, lastYear: lastYear]
+    sqlParameters = [currentYear: currentYear]
     sqlFiles = ['haltestellenbuffer_insert.sql']
 }
 
