--- a/alw_infoflora/build.gradle
+++ b/alw_infoflora/build.gradle
@@ -4,7 +4,8 @@ import java.nio.file.Paths
 import java.nio.file.Files
 import de.undercouch.gradle.tasks.download.Download
 import groovy.json.JsonSlurper
-
+import java.text.SimpleDateFormat
+import java.util.Date
 
 
 apply plugin: "de.undercouch.download"
@@ -28,12 +29,23 @@ task download_json(type: Download){
     doLast {
         def inputFile = new File(pathToTempFolder + "/filenames.json")
         def json = new JsonSlurper().parseText(inputFile.text)
-        println "There is/are " + json.data.size() + " files in the JSON"
-        project.filename = json.data.file_name[0]
-        project.filepath = json.data.folder_name[0]
-        project.fileid = json.data.id[0]
+        def sortedJson = json.data.sort {a, b -> b.last_modified_when <=> a.last_modified_when}
+
+        /*Hier wird festgelegt, welches file auf dem Server gelöscht wird! */        
+        SimpleDateFormat sdfo = new SimpleDateFormat("yyyy-MM-dd")
+        Date date = new Date()
+        Date todayDate = sdfo.parse(sdfo.format(date)) 
+        sortedJson.each {
+            Date fileDate = sdfo.parse(it.last_modified_when)
+            if ((todayDate - fileDate) > 2) {
+                project.fileid = it.id
+                println "Will delete file id "+fileid
+            }     
+        }
+
+        project.filename = sortedJson.file_name[0]
+        project.filepath = sortedJson.folder_name[0]
         println "Filename 0 = " + filename
-        println "Fileid 0 = " + fileid
     }
     src 'https://obs.infoflora.ch/rest/v4/docs.json?projects=83505'
     username infofloraUser
@@ -108,9 +120,16 @@ task deleteFileOnServer(dependsOn: makeGeometry){
     doLast {
         println "project.fileid = " + project.fileid
         exec {
-            workingDir '/tmp'
-            commandLine 'curl', '-i', '-u', infofloraUser + ':' + infofloraPwd, '-k', '-X', 'DELETE', '--header', 'Content-T    ype:application/json', 'https://obs.infoflora.ch/rest/v4/docs/'+localFileid+'.json'
-            println "Deleted file " + filename + ", ID: " + localFileid + " from Server"
+            if(localFileid != 'nobody') {
+                workingDir '/tmp'
+                commandLine 'curl', '-i', '-u', infofloraUser + ':' + infofloraPwd, '-k', '-X', 'DELETE', '--header', 'Content-T    ype:application/json', 'https://obs.infoflora.ch/rest/v4/docs/'+localFileid+'.json'
+                println "Deleted file " + filename + ", ID: " + localFileid + " from Server"
+            }
+            else {
+                commandLine 'cd'
+                println "Did not delete any file"
+            }
         }    
     }
+
 }
