--- a/avt_strassenlaerm/build.gradle
+++ b/avt_strassenlaerm/build.gradle
@@ -1,9 +1,27 @@
 apply plugin: 'ch.so.agi.gretl'
+apply plugin: 'de.undercouch.download'
 
 import ch.so.agi.gretl.tasks.*
 import ch.so.agi.gretl.api.TransferSet
 
-defaultTasks 'transferData'
+//defaultTasks 'transferData'
+defaultTasks 'downloadData'
+
+ext {
+    pathToTempFolder = System.getProperty("java.io.tmpdir")
+    xtfFilePath = Paths.get(pathToUnzipFolder.toString(), 'strassenlaerm_KGDM_20191023.xtf')
+}
+
+task downloadData(type: Download) {
+    src 'https://s3.eu-central-1.amazonaws.com/ch.so.avt.strassenlaerm/strassenlaerm_KGDM_20191023.xtf'
+    dest pathToTempFolder
+    overwrite true
+
+    doLast {
+        println "File downloaded to: " + pathToTempFolder
+    }    
+}
+
 
 task replaceDataset (type: Ili2pgReplace) {
     description = "Ersetzt die Daten in der Edit-DB."
@@ -12,14 +30,16 @@ task replaceDataset (type: Ili2pgReplace) {
     models = "SO_AVT_Strassenlaerm_20190806"
     disableValidation = true
     dataset = "data"
-    dataFile = "strassenlaerm.xtf" // name is injected by jenkins
+    dataFile = file(xtfFilePath)
+    //dataFile = "strassenlaerm.xtf" // name is injected by jenkins
 }
 
+/*
 task transferData(type: Db2Db, dependsOn: replaceDataset) {
     sourceDb = [dbUriEdit, dbUserEdit, dbPwdEdit]
     targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
             new TransferSet("transform_immission_strasse_pointofdetermination.sql", 'avt_strassenlaerm_pub.strassenlaerm_belastung', true)
     ];
-
 }
+*/
