--- a/agi_grundbuchplan_pub/build.gradle
+++ b/agi_grundbuchplan_pub/build.gradle
@@ -1,19 +1,35 @@
 import ch.so.agi.gretl.tasks.*
 import ch.so.agi.gretl.api.TransferSet
 
-defaultTasks 'transferAgiGrundbuchplan'
+defaultTasks 'transferAgiGrundbuchplan', 'transferAgiGrundbuchplanauszug'
 
 task transferAgiGrundbuchplan(type: Db2Db){
-    sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
+    description = "Datenumbau in das Grundbuchplan-Darstellungsmodell."    
+    sourceDb = [dbUriEdit, dbUserEdit, dbPwdEdit]
     targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
-            new TransferSet('agi_grundbuchplan_pub_liegenschaften_grenzpunkt.sql',
-                    'agi_grundbuchplan_pub.liegenschaften_grenzpunkt', true),
-            new TransferSet('agi_grundbuchplan_pub_liegenschaften_grundstueckpos.sql',
-                    'agi_grundbuchplan_pub.liegenschaften_grundstueckpos', true),
-            new TransferSet('agi_grundbuchplan_pub_liegenschaften_liegenschaft.sql',
-                    'agi_grundbuchplan_pub.liegenschaften_liegenschaft', true),
-            new TransferSet('agi_grundbuchplan_pub_bodenbedeckung_boflaechesymbol.sql',
-                    'agi_grundbuchplan_pub.bodenbedeckung_boflaechesymbol', true)
+            new TransferSet("agi_grundbuchplan_pub_grundbuchplan_liegenschaft.sql", 'agi_grundbuchplan_pub.grundbuchplan_liegenschaft', true),
+            new TransferSet("agi_grundbuchplan_pub_grundbuchplan_grenzpunkt.sql", 'agi_grundbuchplan_pub.grundbuchplan_grenzpunkt', true),
+            new TransferSet("agi_grundbuchplan_pub_grundbuchplan_grundstueckpos.sql", 'agi_grundbuchplan_pub.grundbuchplan_grundstueckpos', true),
+            new TransferSet("agi_grundbuchplan_pub_grundbuchplan_bodenbedeckungsymbol.sql", 'agi_grundbuchplan_pub.grundbuchplan_bodenbedeckungsymbol', true)
+    ];
+
+    finalizedBy {
+        updateGrundstueckPos
+    }        
+}
+
+task updateGrundstueckPos(type: SqlExecutor) {
+    description = "Aus Performancegründen kann dieser Umbau nicht beim Transfer gemacht werden."    
+    database = [dbUriPub, dbUserPub, dbPwdPub]
+    sqlFiles = ["update_grundbuchplan_grundstueckpos.sql"]
+}
+
+task transferAgiGrundbuchplanauszug(type: Db2Db) {
+    description = "Datenumbau der Informationen, die für den Grundbuchplanauszug benötigt werden."    
+    sourceDb = [dbUriPub, dbUserPub, dbPwdPub]
+    targetDb = [dbUriPub, dbUserPub, dbPwdPub]
+    transferSets = [
+            new TransferSet("agi_grundbuchplan_pub_grundbuchplan_grundbuchplanauszug.sql", 'agi_grundbuchplan_pub.grundbuchplan_grundbuchplanauszug', true)
     ];
 }
