[afu_geotope_pub]Erster commit dieses Jobs

--- a/afu_geotope_pub/build.gradle
+++ b/afu_geotope_pub/build.gradle
@@ -6,16 +6,14 @@ apply plugin: 'ch.so.agi.gretl'
 defaultTasks 'transferAfuGeotope'
 
 task transferAfuGeotope(type: Db2Db){
-    sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
+    sourceDb = [dbUriEdit, dbUserEdit, dbPwdEdit]
     targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
-            new TransferSet('afu_geotope_pub_geotope_aufschluss.sql', 'afu_geotope_pub.geotope_aufschluss', true), /* Funktioniert erst, wenn Richtplanprojekt abgeschlossen ist; zudem muss der Datenumbau noch die Daten aus der Nutzungsplanung beinhalten*/
-            new TransferSet('afu_geotope_pub_geotope_erratiker.sql', 'afu_geotope_pub.geotope_erratiker', true), /* Funktioniert erst, wenn Richtplanprojekt abgeschlossen ist; zudem muss der Datenumbau noch die Daten aus der Nutzungsplanung beinhalten*/
-            new TransferSet('afu_geotope_pub_geotope_fundstelle_grabung.sql',
-                    'afu_geotope_pub.geotope_fundstelle_grabung', true), /* Funktioniert erst, wenn Richtplanprojekt abgeschlossen ist; zudem muss der Datenumbau noch die Daten aus der Nutzungsplanung beinhalten*/
-            new TransferSet('afu_geotope_pub_geotope_hoehle.sql', 'afu_geotope_pub.geotope_hoehle', true), /* Funktioniert erst, wenn Richtplanprojekt abgeschlossen ist; zudem muss der Datenumbau noch die Daten aus der Nutzungsplanung beinhalten*/
-            new TransferSet('afu_geotope_pub_geotope_landschaftsform.sql', 'afu_geotope_pub.geotope_landschaftsform',
-                    true), /* Funktioniert erst, wenn Richtplanprojekt abgeschlossen ist; zudem muss der Datenumbau noch die Daten aus der Nutzungsplanung beinhalten*/
-            new TransferSet('afu_geotope_pub_geotope_quelle.sql', 'afu_geotope_pub.geotope_quelle', true) /* Funktioniert erst, wenn Richtplanprojekt abgeschlossen ist; zudem muss der Datenumbau noch die Daten aus der Nutzungsplanung beinhalten*/
+            new TransferSet('afu_geotope_pub_geotope_aufschluss.sql', 'afu_geotope_pub.geotope_aufschluss', true),
+            new TransferSet('afu_geotope_pub_geotope_erratiker.sql', 'afu_geotope_pub.geotope_erratiker', true),
+            new TransferSet('afu_geotope_pub_geotope_fundstelle_grabung.sql', 'afu_geotope_pub.geotope_fundstelle_grabung', true),
+            new TransferSet('afu_geotope_pub_geotope_hoehle.sql', 'afu_geotope_pub.geotope_hoehle', true),
+            new TransferSet('afu_geotope_pub_geotope_landschaftsform.sql', 'afu_geotope_pub.geotope_landschaftsform', true),
+            new TransferSet('afu_geotope_pub_geotope_quelle.sql', 'afu_geotope_pub.geotope_quelle', true)
     ]
 }
