--- a/arp_naturreservate_pub/build.gradle
+++ b/arp_naturreservate_pub/build.gradle
@@ -6,7 +6,7 @@ apply plugin: 'ch.so.agi.gretl'
 defaultTasks 'refreshSolr'
 
 task transferArpNaturreservate(type: Db2Db){
-    sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
+    sourceDb = [dbUriEdit, dbUserEdit, dbPwdEdit]
     targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
             new TransferSet('arp_naturreservate_pub_naturreservate_pflanzenliste.sql',
