--- a/agi_dm01avso24/build.gradle
+++ b/agi_dm01avso24/build.gradle
@@ -1,3 +1,4 @@
+
 /*
 buildscript {
   repositories {
@@ -50,7 +51,7 @@ cadastralSurveyingDataSets.each { cadastralSurveyingDataSet ->
         database = [dbUriEdit, dbUserEdit, dbPwdEdit]
         //database = ["jdbc:postgresql://localhost:54321/edit", "admin", "admin"]
         models = 'DM01AVSO24LV95'
-        dbschema = 'agi_dm01avso24'
+        dbschema = 'agi_dm01avso24_strokearcs'
         dataFile = file(Paths.get(pathToTempFolder.toString(), dataSet + "00.itf"))
         //topics = "DM01AVCH24LV95D.Liegenschaften;DM01AVCH24LV95D.Gemeindegrenzen;DM01AVCH24LV95D.Gebaeudeadressen"
         dataset = dataSet
@@ -69,3 +70,4 @@ task replaceCadastralSurveyingData() {
         tasks.findAll { task -> task.name.startsWith('replaceCadastralSurveyingData_') }
     }    
 }
+
